# tiny-font

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  README.md  idf_component.yml
.github/workflows/: ci.yml  format.yml
examples/SDL/IBMF/: CMakeLists.txt  Makefile  main.cpp
examples/SDL/TTF/: CMakeLists.txt  Makefile  main.cpp
examples/esp-idf/: CMakeLists.txt  Makefile  README.md  sdkconfig.defaults.ibmf
examples/esp-idf/main/: CMakeLists.txt  idf_component.yml  main.cpp
src/: Bookerly5pt7b.h  Bookerly6pt7b.h  Bookerly_Display10pt7b.h  Bookerly_Display4pt7b.h  Bookerly_Display5pt7b.h  Bookerly_Display6pt7b.h  Bookerly_Light6pt7b.h  Font.hpp  FontDefs.hpp  FontEntry.hpp  Fonts.cpp  Fonts.hpp  LucidaGrande10pt7b.h  LucidaGrande14pt7b.h  LucidaGrande5pt7b.h  LucidaGrande6pt7b.h  NotoSans_CondensedMedium10pt7b.h  NotoSans_CondensedMedium4pt7b.h  NotoSans_CondensedMedium5pt7b.h  NotoSans_CondensedMedium6pt7b.h  README.md  Tahoma10pt7b.h  Tahoma20pt7b.h  Tahoma4pt7b.h  Tahoma5pt7b.h  Tahoma6pt7b.h  Tahoma7pt7b.h  Tahoma8pt7b.h  Tahoma9pt7b.h  TextTruncation.cpp  TextTruncation.hpp  UTF8Iterator.hpp
src/GFXFonts/: Bookerly_Display10pt7b.h  Bookerly_Display5pt7b.h  Bookerly_Light6pt7b.h  LucidaGrande14pt7b.h  LucidaGrande6pt7b.h  NotoSans_CondensedMedium10pt7b.h  NotoSans_CondensedMedium14pt7b.h  NotoSans_CondensedMedium20pt7b.h  NotoSans_CondensedMedium4pt7b.h  NotoSans_CondensedMedium5pt7b.h  Tahoma10pt7b.h  Tahoma20pt7b.h  Tahoma5pt7b.h  Tahoma6pt7b.h  Tahoma7pt7b.h  Tahoma8pt7b.h  Tahoma9pt7b.h
src/IBMFDriver/: IBMFDefs.hpp  IBMFFace.cpp  IBMFFace.hpp  IBMFFaceLow.cpp  IBMFFaceLow.hpp  IBMFFont.cpp  IBMFFont.hpp  IBMFFontData.cpp  IBMFFontData.hpp  IBMFFontLow.cpp  IBMFFontLow.hpp  RLEExtractor.cpp  RLEExtractor.hpp
src/IBMFFonts/: Arial_75.h  Arial_75.ibmf  Baskerville_75.h  Baskerville_75.ibmf  BeausiteClassic_75.h  BeausiteClassic_75.ibmf  ComicSans_75.h  ComicSans_75.ibmf  DejaVuSansCondensed_75.h  DejaVuSansCondensed_75.ibmf  DejaVuSans_75.h  DejaVuSans_75.ibmf  FiraSans_75.h  FiraSans_75.ibmf  FreeSans_75.h  FreeSans_75.ibmf  GnuUnifont_75.h  GnuUnifont_75.ibmf  Liberation_75.h  Liberation_75.ibmf  NotoSansLight_75.h  NotoSansLight_75.ibmf  NotoSansMedium_75.h  NotoSansMedium_75.ibmf  NotoSans_75.h  NotoSans_75.ibmf  OpenSansCondensed_75.h  OpenSansCondensed_75.ibmf  OpenSans_75.h  OpenSans_75.ibmf  RobotoCondensed_75.h  RobotoCondensed_75.ibmf  Roboto_75.h  Roboto_75.ibmf  SolSans_75.h  SolSans_75.ibmf  SolSans_75_20231024_235531.ibmf  Tahoma_75.h  Tahoma_75.ibmf  UpdatedSolSans_75_20231025_184506.ibmf
src/Misc/: SpiramAllocator.hpp
src/TTFDriver/: TTFCache.cpp  TTFCache.hpp  TTFDefs.hpp  TTFFont.cpp  TTFFont.hpp  TTFFontData.cpp  TTFFontData.hpp  TTFNotoSansLight.cpp  TTFNotoSansLight.hpp
src/TTFFonts/: NotoSans-Light.h  SolPrivate-Light.h  SolPrivate-Light.sfd
tests/: CMakeLists.txt  ImageIO.cpp  ImageIO.hpp  Makefile  TestHelpers.hpp  TestIBMF.cpp  TestTTF.cpp  TestUTF8Iterator.cpp
tests/Catch2/: CMakeLists.txt
